<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="com.example.hong.interactive.MainActivity" >

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:baselineAligned="false">

        <EditText
            android:id="@+id/name_field"
            android:hint="@string/orderName"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textCapWords"/>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/topping"
            android:layout_marginTop="10dp" />


        <CheckBox
            android:id="@+id/cream_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/whipped_cream"
            android:paddingLeft="20dp"/>



        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/chocolate"
            android:paddingLeft="20dp"/>


        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/quantity_name"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="horizontal">

            <Button
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:onClick="decrement"
                android:text="-" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="0" />

            <Button
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:onClick="increment"
                android:text="+" />

        </LinearLayout>

        <Button
            android:id="@+id/order_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:background="@android:color/holo_orange_light"
            android:text="ORDER" />

    </LinearLayout>


</ScrollView>